[metadata]
license_file = LICENSE
name = zipp
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Backport of pathlib-compatible object wrapper for zip files
long_description = file:README.rst
url = https://github.com/jaraco/zipp
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
py_modules = zipp
packages = find:
include_package_data = true
python_requires = >=3.6
install_requires =
	more_itertools
setup_requires = setuptools_scm >= 3.4

[options.extras_require]
testing =
	# upstream

	# local

docs =
	# upstream
	sphinx
	jaraco.packaging >= 3.2
	rst.linker >= 1.9

	# local

[options.entry_points]
